<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/activityBackgroundLight"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/standard_profile_image"
            android:layout_height="@dimen/standard_profile_image"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/default_user" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_1x"
            app:cardBackgroundColor="@color/activityBackgroundLight"
            app:cardCornerRadius="@dimen/standard_corner_radius">

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleBar"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/standard_profile_image"
            android:paddingStart="@dimen/grid_3x"
            android:text="@string/home_titlebar"
            android:textColor="@color/light_green" />

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            app:cardCornerRadius="@dimen/standard_corner_radius">

            <EditText
                android:id="@+id/search"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/search_height"
                android:background="@color/activityBackground"
                android:drawableEnd="@android:drawable/ic_menu_search"
                android:hint="@string/hint_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingLeft="@dimen/grid_2x"
                android:paddingRight="@dimen/grid_2x"
                android:textColor="@color/light_green"
                android:textColorHint="@color/light_green_transparent" />


        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_logout"
        style="@style/StandardButton"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x"
        android:onClick="onLogout"
        android:text="@string/button_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabIndicator="@null"
        tools:layout_editor_absoluteX="0dp"
        android:background="@color/activityBackgroundLight">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/selector_home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/searchTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/selector_search_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/selector_activity" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/write_event"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/feather"
        android:layout_margin="@dimen/grid_3x"
        android:contentDescription="@string/new_activity" />



</androidx.constraintlayout.widget.ConstraintLayout>